<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XML-Parsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista_usuarios">lista_usuarios</string>
    <string name="title_activity_vista_individual">vista_individual</string>
    <string name="id">ID Persona:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="tipo_examen">Tipo De Examen:</string>
    <string name="nivel">Nivel:</string>
    <string name="fecha">Fecha:</string>
</resources>
